--- a/RestaurantRater/Views/Restaurant/Index.cshtml
+++ b/RestaurantRater/Views/Restaurant/Index.cshtml
@@ -33,10 +33,10 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(modelItem => item.Address)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(modelItem => item.Rating)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.RestaurantID })
