--- a/RestaurantRater/Views/Restaurant/Edit.cshtml
+++ b/RestaurantRater/Views/Restaurant/Edit.cshtml
@@ -28,7 +28,7 @@
         @Html.LabelFor(model => model.Address, new { htmlAtrributes = new { @class = "control-label col-md-2" } })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor( model => model.Address, "", new { @class = "text-danger"})
+            @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
@@ -41,12 +41,11 @@
 
     <!--Add Save button-->
     <div class="form-group">
-        <div class=" col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Save Edit" class="btn btn-default" />
             @Html.ActionLink("Back to index", "Index")
         </div>
     </div>
-
 </div>
 
 <!--Notice on line 17: the HiddenFor() statement is keeping the RestaurantID hidden so that a user can not edit it.  It must remain its original value.  But, since we do need to USE the Id, regardless of its editability, it still must be in our view.-->
